--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2"
+  }
 }
